--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "module": "ES6",
+    "noEmit": true,
     "allowImportingTsExtensions": true,
     "lib": ["esnext", "DOM"],
     "noImplicitAny": false
